tests/snapshots/integration_tests__snapshot_tests__array_min_and_copy_shift_sum.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_min_and_copy_shift_sum.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (- (Read_Int_Int a+0 (- N (+ i+0 1))) j+0)) i+3) (Read_Int_Int b+0 i+3))",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (- (Read_Int_Int a+0 (- N (+ i+0 1))) j+0)) 0) (Read_Int_Int b+0 0))",
        "(= (Read_Int_Int (Write_Int_Int b+0 i+0 (- (Read_Int_Int a+0 (- N (+ i+0 1))) j+0)) i+0) (- (Read_Int_Int a+0 (- N (+ i+0 1))) j+0))",
    ],
}
